test/compile_errors/stage1/obj/wasmMemoryGrow_is_a_compile_error_in_non-Wasm_targets.zig
export fn foo() void {
    _ = @wasmMemoryGrow(0, 1);
    return;
}

// wasmMemoryGrow is a compile error in non-Wasm targets
//
// tmp.zig:2:9: error: @wasmMemoryGrow is a wasm32 feature only
